# lightlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yaml
cmake/: gtest.cmake
include/: Singleton.h  lightlog.h  logmgr.h
src/: CMakeLists.txt  lightlog.cpp
src/logger/: logger.cpp  logger.h
src/logmgr/: CMakeLists.txt  logmgr.cpp  logmgr.h
test/: CMakeLists.txt  main.cpp  test_lightlog.cpp
